--- a/Numberle/MainWindow.xaml
+++ b/Numberle/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Numberle.MainWindow"
+<Window x:Class="Numberle.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -13,8 +13,6 @@
         </Menu>
         <Grid x:Name="MainGrid" Margin="10">
             <Grid.RowDefinitions>
-                <RowDefinition />
-                <RowDefinition />
                 <RowDefinition />
                 <RowDefinition />
                 <RowDefinition />
@@ -104,30 +102,6 @@
                      x:Name="Guess_5_4" MaxLength="1" PreviewTextInput="CheckIfNumber_PreviewTextInput" />
 
             <!-- Wiersz 6 -->
-            <TextBox Grid.Row="6" Grid.Column="0" Margin="2" FontSize="24" TextAlignment="Center" IsEnabled="False"
-                     x:Name="Guess_6_0" MaxLength="1" PreviewTextInput="CheckIfNumber_PreviewTextInput" />
-            <TextBox Grid.Row="6" Grid.Column="1" Margin="2" FontSize="24" TextAlignment="Center" IsEnabled="False"
-                     x:Name="Guess_6_1" MaxLength="1" PreviewTextInput="CheckIfNumber_PreviewTextInput" />
-            <TextBox Grid.Row="6" Grid.Column="2" Margin="2" FontSize="24" TextAlignment="Center" IsEnabled="False"
-                     x:Name="Guess_6_2" MaxLength="1" PreviewTextInput="CheckIfNumber_PreviewTextInput" />
-            <TextBox Grid.Row="6" Grid.Column="3" Margin="2" FontSize="24" TextAlignment="Center" IsEnabled="False"
-                     x:Name="Guess_6_3" MaxLength="1" PreviewTextInput="CheckIfNumber_PreviewTextInput" />
-            <TextBox Grid.Row="6" Grid.Column="4" Margin="2" FontSize="24" TextAlignment="Center" IsEnabled="False"
-                     x:Name="Guess_6_4" MaxLength="1" PreviewTextInput="CheckIfNumber_PreviewTextInput" />
-
-            <!-- Wiersz 7 -->
-            <TextBox Grid.Row="7" Grid.Column="0" Margin="2" FontSize="24" TextAlignment="Center" IsEnabled="False"
-                     x:Name="Guess_7_0" MaxLength="1" PreviewTextInput="CheckIfNumber_PreviewTextInput" />
-            <TextBox Grid.Row="7" Grid.Column="1" Margin="2" FontSize="24" TextAlignment="Center" IsEnabled="False"
-                     x:Name="Guess_7_1" MaxLength="1" PreviewTextInput="CheckIfNumber_PreviewTextInput" />
-            <TextBox Grid.Row="7" Grid.Column="2" Margin="2" FontSize="24" TextAlignment="Center" IsEnabled="False"
-                     x:Name="Guess_7_2" MaxLength="1" PreviewTextInput="CheckIfNumber_PreviewTextInput" />
-            <TextBox Grid.Row="7" Grid.Column="3" Margin="2" FontSize="24" TextAlignment="Center" IsEnabled="False"
-                     x:Name="Guess_7_3" MaxLength="1" PreviewTextInput="CheckIfNumber_PreviewTextInput" />
-            <TextBox Grid.Row="7" Grid.Column="4" Margin="2" FontSize="24" TextAlignment="Center" IsEnabled="False"
-                     x:Name="Guess_7_4" MaxLength="1" PreviewTextInput="CheckIfNumber_PreviewTextInput" />
-
-            <!-- Wiersz 8 -->
             <Button Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="5" Margin="5" Height="40" Content="Sprawdź" Click="CheckGuess_Click" />
         </Grid>
     </DockPanel>
